Archive2/34/e4bbabcd3c6cc8/output
main.cpp: In function 'int main()':
main.cpp:7:7: error: request for member 'drive' in 'c', which is of pointer type 'Car*' (maybe you meant to use '->' ?)
     c.drive();
       ^
